server up and running

--- a/package.json
+++ b/package.json
@@ -1,38 +1,43 @@
 {
-  "name": "node-auth-afternoon",
-  "version": "0.1.0",
-  "private": true,
-  "proxy": "http://localhost:4000",
-  "main": "server/index.js",
-  "dependencies": {
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/devlemire/node-auth-afternoon.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/devlemire/node-auth-afternoon/issues"
-  },
-  "homepage": "https://github.com/devlemire/node-auth-afternoon#readme"
+    "name": "node-auth-afternoon",
+    "version": "0.1.0",
+    "private": true,
+    "proxy": "http://localhost:5000",
+    "main": "server/server.js",
+    "dependencies": {
+        "axios": "^0.19.0",
+        "dotenv": "^8.1.0",
+        "express": "^4.17.1",
+        "express-session": "^1.16.2",
+        "massive": "^6.1.0",
+        "react": "^16.5.2",
+        "react-dom": "^16.5.2",
+        "react-scripts": "2.0.5"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/devlemire/node-auth-afternoon.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/devlemire/node-auth-afternoon/issues"
+    },
+    "homepage": "https://github.com/devlemire/node-auth-afternoon#readme"
 }
