--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "main": "server/server.js",
     "dependencies": {
         "axios": "^0.19.0",
+        "bcryptjs": "^2.4.3",
         "dotenv": "^8.1.0",
         "express": "^4.17.1",
         "express-session": "^1.16.2",
         "massive": "^6.1.0",
         "react": "^16.5.2",
         "react-dom": "^16.5.2",
-        "react-scripts": "2.0.5"
+        "react-scripts": "2.0.5",
+        "sweetalert2": "^8.17.6"
     },
     "scripts": {
         "start": "react-scripts start",
